--- a/east-central-line-stations.ipynb
+++ b/east-central-line-stations.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "Yours,\n",
     "\n",
-    "That friendly guy who spoke to us at Roading Valley station.\n",
+    "That friendly guy who spoke to us at Roding Valley Station.\n",
     "\n",
     "_note: this email is best read on a screen with an aspect ratio that isn't too wide. If the plots/images are all huge, consider shrinking the window width._"
    ]
