--- a/east-central-line-stations.ipynb
+++ b/east-central-line-stations.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ratings Analysis for Central Line stations east of Leyton\n",
+    "# An analysis of Central Line stations east of Leyton\n",
     "\n",
     "**Participants:** Hugh, Charlie, George, Oliver\n",
     "\n",
@@ -12,7 +12,7 @@
     "\n",
     "Dear East Central Line Aficionados,\n",
     "\n",
-    "I've crunched the numbers. The results are in, all crunched up. Here is my big analysis of our station opinions. Let me know if I've missed anything or made glaring errors.\n",
+    "I've crunched the numbers. They're all crunched up. The results are in. Here is my big analysis of our station opinions. Let me know if I've missed anything or made glaring errors.\n",
     "\n",
     "Yours,\n",
     "\n",
